--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.devSait.saitMediator">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SaitMediator">
-        <activity android:name=".register_page"></activity>
+        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".register_page" />
         <activity android:name=".login_page" />
         <activity android:name=".MainActivity">
             <intent-filter>
