--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SaitMediator">
-        <activity android:name=".register_page"></activity>
+        <activity android:name=".Marksheet"></activity>
+        <activity android:name=".register_page" />
         <activity android:name=".Dashboard" />
         <activity android:name=".login_page" />
         <activity android:name=".MainActivity">
