--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            multiDexEnabled true
         }
     }
     compileOptions {
@@ -44,16 +45,17 @@ dependencies {
 dependencies {
 
 
-    implementation 'com.google.firebase:firebase-firestore:23.0.1'
-    implementation 'org.jetbrains:annotations:15.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
+    implementation 'org.jetbrains:annotations:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
-    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
