--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,13 @@ plugins {
 }
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -58,4 +65,6 @@ dependencies {
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'sun.bob:mcalendarview:1.0.0'
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
 }
