--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-
+        jcenter()
 
     }
     dependencies {
@@ -13,12 +13,14 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 
