--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 dependencies {
 
 
+    implementation 'com.google.firebase:firebase-firestore:23.0.1'
     implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
     implementation 'org.jetbrains:annotations:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
